# vibe-downloader

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/config/: mod.rs  settings.rs
backend/src/db/: mod.rs  schema.rs
backend/src/download/: manager.rs  mod.rs  task.rs
backend/src/server/: mod.rs  routes.rs  static_files.rs  websocket.rs
backend/src/tray/: mod.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AddDownloadDialog.tsx  DownloadList.tsx  SettingsPanel.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/types/: index.ts
